# specviz

./: .coverage.subprocess  .gitignore  .gitmodules  .rtd-environment.yml  .travis.yml  LICENSE.rst  MANIFEST.in  README.md  README.rst  appveyor.yml  flake8docs.cfg  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.pytest_cache/v/cache/: lastfailed  nodeids
docs/: api.rst  arithmetic-layer.rst  conf.py  developer.rst  environment.yml  exporting.rst  getting-started.rst  getting_started.rst  index.rst  installation.rst  launching.rst  line_labels.rst  loader_wizard.rst  loading_data.rst  model_fitting.rst  operations.rst  regions.rst  statistics.rst  stats_sidebar.rst  unit_conversion.rst  viewer.rst  workspaces_and_plots.rst
docs/source/: conf.py  index.rst  installation.rst  launching.rst  model_fitting.rst  viewer.rst
docs/specviz/: api.rst  index.rst  viewer.rst
licenses/: LICENSE.rst
pyfocal/interfaces/: model_io.py
pyfocal/ui/: controller.py  viewer.py
pyfocal/ui/qt/: icon_resource_rc.py  mainwindow.py  plotsubwindow.py
specviz/: __init__.py  app.py  client.py  conftest.py  retired.py  server.py
specviz/analysis/: filters.py  operations.py  statistics.py  utils.py
specviz/analysis/models/: blackbody.py  gaussian_absorption.py
specviz/analysis/tests/: test_statistics.py
specviz/core/: __init__.py  annotation.py  comms.py  data.py  delegates.py  dispatch.py  events.py  hub.py  items.py  linelist.py  models.py  operations.py  plots.py  plugin.py  threads.py
specviz/data/: resources.qrc
specviz/data/linelists/: Atomic-Ionic.list  Atomic-Ionic.yaml  CO.list  CO.yaml  Common_nebular.yaml  Common_stellar.yaml  DEV_NOTES.txt  H-He.list  H-He.yaml  H2.list  H2.yaml  JWST_line_list_original.txt  Reader-Corliss.yaml  SDSS-IV.list  SDSS-IV.yaml  SDSS.list  SDSS.yaml  illss.list  illss.yaml
specviz/data/mask_definitions/: jwst.ecsv  sdss.ecsv
specviz/data/resources/: CREDIT.md  resources.qrc  specviz.icns
specviz/data/ui/: arithmetic_editor.ui  main_window.ui  model_editor.ui  model_editor.ui.autosave  plot_window.ui  smoothing.ui  statistics.ui  unit_change_dialog.ui  workspace.ui
specviz/data/yaml_loaders/: sdss_optical.yaml
specviz/interfaces/: decorators.py  factories.py  initializers.py  loaders.py  registries.py
specviz/interfaces/model_io/: py_model_io.py  yaml_model_io.py
specviz/io/: yaml_loader.py
specviz/io/loaders/: __init__.py  apogee.py  apogee_loader.py  ascii.py  ascii_ipac.py  ecsv.py  ecsv_loader.py  generic_fits.py  generic_loader.py  hst_cos.py  hst_stis.py  sdss.py  sdss_loader.py
specviz/io/wizard/: __init__.py  fits_wizard.ui  parse_fits.py  wizard.py  wizard.ui
specviz/io/writers/: generic_writer.py
specviz/io/yaml_loaders/: sdss_optical.mask  sdss_optical.yaml  sdss_spec.yaml
specviz/plugins/: __init__.py  data_list_plugin.py  layer_list_plugin.py  mask_editor_plugin.py  model_fitting_plugin.py  plot_tools_plugin.py  statistics_plugin.py  tool_tray_plugin.py
specviz/plugins/arithmetic/: __init__.py  arithmetic_editor.py  equation_editor.ui
specviz/plugins/line_labels/: __init__.py  annotation.py  line_labels_plotter.py  linelist.py  linelists_window.py  linelists_window.ui
specviz/plugins/loader_wizard/: __init__.py  loader_wizard.py  loader_wizard.ui  new_loader_fits_uncer_py.tmpl  new_loader_py.tmpl  new_loader_uncer_ivar_py.tmpl  new_loader_uncer_stddev_py.tmpl  new_loader_wcs_py.tmpl  new_loader_wcs_uncer_ivar_py.tmpl  new_loader_wcs_uncer_stddev_py.tmpl  parse_initial_file.py  template.py
specviz/plugins/model_editor/: __init__.py  continuum_generator.py  equation_editor_dialog.py  equation_editor_dialog.ui  initializers.py  items.py  main.py  model_advanced_settings.ui  model_editor.py  model_editor.ui  models.py
specviz/plugins/smoothing/: __init__.py  main.py  smoothing.ui  smoothing_dialog.py
specviz/plugins/statistics/: __init__.py  main.py  statistics.ui  statistics_widget.py
specviz/plugins/unit_change/: __init__.py  unit_change_dialog.py  unit_change_dialog.ui
specviz/tests/: __init__.py  setup_package.py  test_app.py  test_example.py  test_load_data.py  test_specviz_gui.py  test_startup.py  test_unit_conversion_gui.py
specviz/ui/: viewer.py
specviz/ui/widgets/: dialogs.py  sub_windows.py  windows.py
specviz/utils/: __init__.py  helper_functions.py  parse_ecsv.py  parse_fits.py  qt_utils.py
specviz/widgets/: arithmetic_editor.py  axes.py  custom.py  delegates.py  dialogs.py  line_labels_plotter.py  linelists_window.py  main_window.py  menus.py  plot_window.py  plotting.py  plugin.py  region_items.py  resources.py  smoothing.py  spectrum_selection.py  specutils_unit_conversion.ui  spoiler.py  statistics.py  sub_windows.py  toolbars.py  unit_change_dialog.py  utils.py  windows.py  wizard.py  workspace.py
specviz/widgets/qt_plugins/: spoiler_plugin.py
specviz/widgets/tests/: test_spectrum_selection.py  test_workspace.py
(+37 files in other folders)
