[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
testpaths = specviz docs
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = specviz
description = An interactive astronomical 1D spectra analysis tool
long_description = A gui-based interactive analysis tool for one dimensional astronomical data using Python.
author = JDADF Developers
author_email = nearl@stsci.edu
license = BSD 3-Clause
url = https://specviz.rtfd.io
edit_on_github = True
github_project = spacetelescope/specviz
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy>=3.0, pyqt5, pyqtgraph, qtawesome, qtpy, specutils>=0.5.1, click, pytest, asteval
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.6.1
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5

[entry_points]
specviz = specviz.app:start
# astropy-package-template-example = packagename.example_mod:main

