[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
testpaths = specviz docs
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
name = specviz
package_name = specviz
provides = specviz
description = An interactive astronomical 1D spectra analysis tool
long_description = file: README.rst
author = JDADF Developers
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/spacetelescope/specviz
edit_on_github = False
github_project = spacetelescope/specviz

[options]
packages = find:
zip_safe = False
python_requires = >=3.6
include_package_data = False
setup_requires = setuptools_scm

[options.extras_require]
docs =
    sphinx-rtd-theme
    sphinx-astropy

[options.entry_points]
gui_scripts =
    specviz = specviz.retired:main
